manifests/interceptor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: interceptor
spec:
  selector:
    matchLabels:
      run: interceptor
  replicas: 1
  template:
    metadata:
      labels:
        run: interceptor
    spec:
      containers:
        - name: interceptor
          image: localhost:5000/interceptor
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: interceptor
  labels:
    run: interceptor
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    run: interceptor
